Bug 163842 - XLS, XLSX Certain roundtripped spreadsheets not opening in Excel due to regression
Summary: XLS, XLSX Certain roundtripped spreadsheets not opening in Excel due to regre...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
7.0.0.3 release
Hardware: All All
: high normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.2.0 target:24.8.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks: XLSX-Corrupted
  Show dependency treegraph
 
Reported: 2024-11-11 05:25 UTC by Aron Budea
Modified: 2025-01-28 14:31 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
forum-es-7576.xlsx (10.88 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2024-11-11 05:25 UTC, Aron Budea
Details
forum-mso-de-63075.xls (86.00 KB, application/vnd.ms-excel)
2024-11-11 05:25 UTC, Aron Budea
Details
forum-mso-en4-67264.xls (43.50 KB, application/vnd.ms-excel)
2024-11-11 05:26 UTC, Aron Budea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2024-11-11 05:25:01 UTC
Created attachment 197535 [details]
forum-es-7576.xlsx

The attached files can all be opened in Excel in their current state.
Open them in LO, save them as XLSX, and try opening them in Excel.

=> Excel is unable to open the files, and shows error message.

Here's a list of some files from LO's bugzilla/forum files that are affected (a few of those are attached):
forum-mso-de-63075.xls
forum-mso-en4-114468.xls
forum-mso-en4-268566.xls
forum-mso-en4-280967.xls
forum-mso-en4-52733.xls
forum-mso-en4-56244.xls
forum-mso-en4-67264.xls
forum-es-7576.xlsx

Not sure if the cause is the same, most have macros and form controls, where some content used to get lost in the past, and it's still lost, but at least in the past the roundtripped files could be opened in Excel.
All in the list regressed from the following commit, bibisected using bibisect-win64-7.0:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=fd238380ae7820f12ac1f7c52d0f7180a93f3ba3
author		Serge Krot <Serge.Krot@cib.de>	2020-05-13 22:52:52 +0200
committer	Thorsten Behrens <Thorsten.Behrens@CIB.de>	2020-05-26 00:20:54 +0200

tdf#106181 XLSX export: output form controls
Comment 1 Aron Budea 2024-11-11 05:25:36 UTC
Created attachment 197536 [details]
forum-mso-de-63075.xls
Comment 2 Aron Budea 2024-11-11 05:26:07 UTC
Created attachment 197537 [details]
forum-mso-en4-67264.xls
Comment 3 m_a_riosv 2024-11-11 22:37:58 UTC Comment hidden (obsolete)
Comment 4 Aron Budea 2024-11-12 01:14:12 UTC
(In reply to m_a_riosv from comment #3)
> The three sample files open without error message
> Microsoft® Excel® para Microsoft 365 MSO (versión 2410 compilación
> 16.0.18129.20100) de 64 bits
Thanks for checking, but please note the reproduction steps:
"The attached files can all be opened in Excel in their current state.
Open them in LO, save them as XLSX, and try opening them in Excel."
Comment 5 m_a_riosv 2024-11-12 01:26:20 UTC
Pls forgive the mistake.

Only forum-en-7576.xlsx shows an error message when opened with Excel after save as XLSX, but after agreeing to correct it, it seems to open fine.

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7713d916e06a8388f849a758f928cbcfded6c0ae
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 26100); UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 6 Regina Henschel 2024-11-12 01:47:40 UTC
The export to the sortState element in sheet1.xml is erroneous in forum-es-7576.xlsx.

(In reply to Aron Budea from comment #0)
> All in the list regressed from the following commit, bibisected using
> bibisect-win64-7.0:
> 
> https://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=fd238380ae7820f12ac1f7c52d0f7180a93f3ba3
> author		Serge Krot <Serge.Krot@cib.de>	2020-05-13 22:52:52 +0200
> committer	Thorsten Behrens <Thorsten.Behrens@CIB.de>	2020-05-26 00:20:54
> +0200
> 
> tdf#106181 XLSX export: output form controls

Are you sure about the commit? From the effected element I would expect, that something is wrong in https://cgit.freedesktop.org/libreoffice/core/commit/?id=a9f8f0a484965338221cad4f97d98f418b5ccff1
But I do not know how to make a bibisect.
Comment 7 Timur 2024-11-21 14:36:56 UTC
OP commit that Aron bisected from 2020-05-26 really spoiled opening in MSO for  forum-es-7576.xlsx.
But it was likely fixed later, as before Regina's commit on 2020-06-29 saved file would open in MSO.
So that one is the relevant regression. Also from Serge, CC and please see.
Comment 8 Gülşah Köse 2024-11-22 12:54:03 UTC
https://gerrit.libreoffice.org/c/core/+/177016  will fix the sortCondition regression
Comment 9 Aron Budea 2024-11-23 16:11:00 UTC
(In reply to Timur from comment #7)
> But it was likely fixed later, as before Regina's commit on 2020-06-29 saved
> file would open in MSO.
Indeed it was, Regina is correct. The commit that intermittently fixed attachment 197535 [details] is somewhere in this range (single commit in bibisect-win64-7.1):
https://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=c6a4407897b62e3262c4864d3a7d0e6dc0d00f1a..b5cb211f80fd87c109633232cf340ac7969c8648

Gülşah, thanks for the fix! There is a chance it will only fix this one sample, as the others continued to fail even after the range identified above. In that case this bug can be closed when the fix is merged in the master branch, and I will open a new bug report for the remaining files.
Comment 10 Commit Notification 2024-11-26 07:58:23 UTC
Gülşah Köse committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d902401452d85db0c320401335b5170dfa5f6c51

tdf#163842 Fix autofilter ascending sort condition reference import

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2024-11-28 09:37:21 UTC
Gülşah Köse committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/75b15fa500b5f1cdbc50a54f9edcec3f549ed4a5

tdf#163842 Fix autofilter ascending sort condition reference import

It will be available in 24.8.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.