tdf#163842 Fix autofilter ascending sort condition reference import

if (rSorConditionLoaded.mbDescending) condition ignores the ascending sort.
So when we import a document that uses ascending sort then export it, we
don't know which column is sorted.

With the following patch we fix this case.

Signed-off-by: Gülşah Köse <gulsah.kose@collabora.com>
Change-Id: I561146517959a87eb0fb6cec419d68299bcb7eee
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/177016
Reviewed-by: Szymon Kłos <szymon.klos@collabora.com>
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>